--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@ a {
 .button:active {
     transform: scale(98%);
 }
+
+#logout-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+}
