--- a/style.css
+++ b/style.css
@@ -36,9 +36,12 @@ h1, h2, h3 {
 
 p, span, a, div, button, input {
     font-family: 'Gotham', 'sans-serif';
-    font-weight: normal;
     color: white;
+}
+
+p, a, button, input {
     font-size: 1rem;
+    font-weight: normal;
 }
 
 a {
@@ -49,6 +52,10 @@ a {
 #login-top-text {
     text-align: center;
     max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
 }
 
 .button {
@@ -74,4 +81,13 @@ a {
     position: absolute;
     top: 2rem;
     right: 2rem;
+}
+
+.logo {
+    width: 100%;
+    max-width: 300px;
+}
+
+.green-text {
+    color: var(--dark-green);
 }
